yu zhong 197g ji ri qi nu bi ya Z50 jiang zai zhong xing shang cheng jing dong tian mao pin duo duo su ning

--- a/index.html
+++ b/index.html
@@ -127,6 +127,104 @@
                 <div class="col-md-9">
                     <h2>最近更新文章</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-03">
+                            <div class="col-md-3">
+                                <a href="/news/article-173663.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/38a2b805d092ccfce4ea66fd732ce397.webp" style="width:100%;" alt="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-173663.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程                                    </h3>
+                                </a>
+                                <p>引言：为什么选择V2RayNG？  在数字时代，网络自由与隐私保护已成为刚需。V2RayNG作为V2Ray协议的安卓/Windows客户端代表，凭借其模块化设计、多协议支持和动态路由能力，正在取代传统</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-02">
+                            <div class="col-md-3">
+                                <a href="/news/article-173276.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/91fe0c32cb57005cfadc0dfb716fb1c5.webp" style="width:100%;" alt="穿越信息高墙：2018年11月科学上网全攻略深度回顾">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-173276.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        穿越信息高墙：2018年11月科学上网全攻略深度回顾                                    </h3>
+                                </a>
+                                <p>在数字信息横飞的时代，网络自由成了越来越多用户所追求的一种数字“人权”。但在现实中，全球仍有部分地区对互联网进行内容屏蔽、访问限制，甚至进行深度数据包检测（DPI），使得普通用户在访问如 Google</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-11-01">
+                            <div class="col-md-3">
+                                <a href="/news/article-172904.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/09d18c7c66bcd5cdb6be185eb4661962.webp" style="width:100%;" alt="V2Ray与WHMCS的完美融合：打造高效代理服务管理平台">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172904.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        V2Ray与WHMCS的完美融合：打造高效代理服务管理平台                                    </h3>
+                                </a>
+                                <p>在当今互联网环境中，隐私保护和网络自由访问的需求日益增长，而V2Ray作为一款强大的代理工具，配合WHMCS这一专业的自动化管理系统，能够为用户提供既安全又便捷的网络服务体验。本文将深入探讨如何将这两</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-31">
+                            <div class="col-md-3">
+                                <a href="/news/article-172513.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/409889d86ff78f44fa13a03963ed57cd.webp" style="width:100%;" alt="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172513.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单                                    </h3>
+                                </a>
+                                <p>在数字边界日益紧缩的今天，访问自由网络成为不少技术用户的刚性需求。而随着V2Ray协议的流行和SSPanel控制面板的成熟，“可控”、“安全”、“高效”的翻墙解决方案逐渐成为主流。对于追求稳定和多用户</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-27">
+                            <div class="col-md-3">
+                                <a href="/news/article-172131.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/7a8c47b9b2a0e8744a37b30b3d5b9034.webp" style="width:100%;" alt="安卓用户必看：彻底解决Clash代理不稳定的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172131.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        安卓用户必看：彻底解决Clash代理不稳定的终极指南                                    </h3>
+                                </a>
+                                <p>在当今互联网环境中，科学上网工具已成为许多用户的刚需。作为一款功能强大、配置灵活的代理工具，Clash凭借其出色的性能和丰富的功能，在安卓平台上赢得了大量用户的青睐。然而，不少用户反映在使用过程中遇到</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-26">
+                            <div class="col-md-3">
+                                <a href="/news/article-171731.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/91fe0c32cb57005cfadc0dfb716fb1c5.webp" style="width:100%;" alt="全面掌握Clash订阅地址转换：从原理到实践的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171731.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面掌握Clash订阅地址转换：从原理到实践的完整指南                                    </h3>
+                                </a>
+                                <p>引言：为什么我们需要关注Clash订阅地址转换  在当今数字化时代，网络安全与隐私保护已成为每个互联网用户必须面对的重要课题。随着网络审查日益严格，越来越多用户开始使用代理工具来突破限制、保护隐私。在</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-25">
+                            <div class="col-md-3">
+                                <a href="/news/article-171356.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/4aeea760fe59c1a942a5f33de4469473.webp" style="width:100%;" alt="Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171356.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答                                    </h3>
+                                </a>
+                                <p>一、为什么需要Shadowrocket访问Instagram？  在当今互联网环境中，许多地区对Instagram等社交平台的访问存在限制。Shadowrocket作为一款专业的网络代理工具，凭借其多</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-24">
                             <div class="col-md-3">
                                 <a href="/news/article-170977.htm" class="xcblog-blog-url">
@@ -309,105 +407,6 @@
                                 <p>在当今高度互联的数字时代，互联网自由已成为全球网民的基本需求。然而，由于各种原因，许多地区的用户面临着网络限制和内容审查的困扰。科学上网协议应运而生，成为突破这些限制的关键技术手段。本文将深入探讨科学</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-11">
-                            <div class="col-md-3">
-                                <a href="/news/article-165946.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/a07724a54716f780859ad080d68f8d0a.webp" style="width:100%;" alt="v2rayNG停止运行的原因及全面解决方案">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-165946.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        v2rayNG停止运行的原因及全面解决方案                                    </h3>
-                                </a>
-                                <p>引言：v2rayNG为何频繁崩溃？
-在现代互联网环境下，v2rayNG 已成为许多用户翻墙、保护隐私、访问国际网站的首选代理工具。然而，在日常使用过程中，不少用户都会遇到v2rayNG停止运行或频繁崩</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-10">
-                            <div class="col-md-3">
-                                <a href="/news/article-165569.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/6ee7bb92262f32bc0e17e846b2f17a5d.webp" style="width:100%;" alt="掌握Surfboard配置艺术：从入门到精通的完全指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-165569.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        掌握Surfboard配置艺术：从入门到精通的完全指南                                    </h3>
-                                </a>
-                                <p>在现代网络环境中，配置工具已成为系统管理员和开发者必备的核心技能。Surfboard作为一款功能强大的配置管理工具，正以其简洁的设计和高效的性能赢得越来越多技术人员的青睐。本文将带您深入探索Surfb</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-09">
-                            <div class="col-md-3">
-                                <a href="/news/article-165202.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/9a9ba873d82174884cd4ac0fc8367168.webp" style="width:100%;" alt="轻松掌握：V2Ray剪切板配置导入Mac全攻略">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-165202.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        轻松掌握：V2Ray剪切板配置导入Mac全攻略                                    </h3>
-                                </a>
-                                <p>在当今互联网环境下，科学上网已成为许多用户的日常需求。作为一款功能强大的代理工具，V2Ray以其灵活的配置和稳定的性能赢得了广泛青睐。对于Mac用户而言，掌握从剪切板快速导入V2Ray配置的技巧，能够</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
-                            <div class="col-md-3">
-                                <a href="/news/article-164810.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/38a2b805d092ccfce4ea66fd732ce397.webp" style="width:100%;" alt="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-164810.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        精通Shadowrocket规则配置：从入门到高阶的完整实践手册                                    </h3>
-                                </a>
-                                <p>引言：数字时代的智能网络导航仪  在全球化互联网访问需求激增的今天，Shadowrocket作为iOS平台的专业级代理工具，凭借其精细化的规则配置系统，已成为科技爱好者和隐私需求者的首选。本文将系统性</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
-                            <div class="col-md-3">
-                                <a href="/news/article-164439.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/4aeea760fe59c1a942a5f33de4469473.webp" style="width:100%;" alt="精通Clash端口设置：从入门到实战的完整指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-164439.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        精通Clash端口设置：从入门到实战的完整指南                                    </h3>
-                                </a>
-                                <p>引言：为什么你需要关注Clash端口设置？  在当今数字化时代，网络隐私与效率已成为刚需。Clash作为一款开源、多协议支持的代理工具，凭借其灵活的流量管理能力，逐渐成为技术爱好者和隐私需求者的首选。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
-                            <div class="col-md-3">
-                                <a href="/news/article-164070.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/0cdbb171f8d1d7104a29a47c2be5e046.webp" style="width:100%;" alt="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-164070.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        全面掌握Shadowrocket安卓版：从零开始实现安全网络代理                                    </h3>
-                                </a>
-                                <p>在当今数字化时代，网络安全与隐私保护已成为每个互联网用户的刚需。无论是突破网络限制访问全球资源，还是保护个人数据免受窥探，一款优秀的网络代理工具都显得至关重要。在众多代理工具中，Shadowrocke</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
-                            <div class="col-md-3">
-                                <a href="/news/article-163737.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/a07724a54716f780859ad080d68f8d0a.webp" style="width:100%;" alt="突破网络藩篱：科学上网APK网盘完全使用手册">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-163737.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络藩篱：科学上网APK网盘完全使用手册                                    </h3>
-                                </a>
-                                <p>引言：数字时代的自由通行证  在这个信息爆炸的时代，互联网本应是无国界的知识海洋，然而现实中我们却常常遭遇无形的数字围墙。当你想查阅某个学术资料、观看海外公开课，或是与全球同事协作时，那道"该页面无法</p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -417,16 +416,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
                         <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
-                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
                         <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
-                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
-                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
+                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
                         <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
+                        <li class="py-2"><a href="/news/article-173663.htm" title="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程</a></li>
+                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
+                        <li class="py-2"><a href="/news/article-171356.htm" title="Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答">Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答</a></li>
                     </ul>
     </div>
 </div>
@@ -438,7 +437,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
