--- a/client.htm
+++ b/client.htm
@@ -282,16 +282,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
+                        <li class="py-2"><a href="/news/article-172513.htm" title="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单</a></li>
+                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-173663.htm" title="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程</a></li>
+                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
                         <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
                         <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
-                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-162685.htm" title="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
                     </ul>
     </div>
 </div>
@@ -303,7 +303,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
