--- a/date/2025-10/index.htm
+++ b/date/2025-10/index.htm
@@ -117,6 +117,62 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-31">
+                            <div class="col-md-3">
+                                <a href="/news/article-172513.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/409889d86ff78f44fa13a03963ed57cd.webp" style="width:100%;" alt="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172513.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单                                    </h3>
+                                </a>
+                                <p>在数字边界日益紧缩的今天，访问自由网络成为不少技术用户的刚性需求。而随着V2Ray协议的流行和SSPanel控制面板的成熟，“可控”、“安全”、“高效”的翻墙解决方案逐渐成为主流。对于追求稳定和多用户</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-27">
+                            <div class="col-md-3">
+                                <a href="/news/article-172131.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/7a8c47b9b2a0e8744a37b30b3d5b9034.webp" style="width:100%;" alt="安卓用户必看：彻底解决Clash代理不稳定的终极指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-172131.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        安卓用户必看：彻底解决Clash代理不稳定的终极指南                                    </h3>
+                                </a>
+                                <p>在当今互联网环境中，科学上网工具已成为许多用户的刚需。作为一款功能强大、配置灵活的代理工具，Clash凭借其出色的性能和丰富的功能，在安卓平台上赢得了大量用户的青睐。然而，不少用户反映在使用过程中遇到</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-26">
+                            <div class="col-md-3">
+                                <a href="/news/article-171731.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/91fe0c32cb57005cfadc0dfb716fb1c5.webp" style="width:100%;" alt="全面掌握Clash订阅地址转换：从原理到实践的完整指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171731.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        全面掌握Clash订阅地址转换：从原理到实践的完整指南                                    </h3>
+                                </a>
+                                <p>引言：为什么我们需要关注Clash订阅地址转换  在当今数字化时代，网络安全与隐私保护已成为每个互联网用户必须面对的重要课题。随着网络审查日益严格，越来越多用户开始使用代理工具来突破限制、保护隐私。在</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-25">
+                            <div class="col-md-3">
+                                <a href="/news/article-171356.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/4aeea760fe59c1a942a5f33de4469473.webp" style="width:100%;" alt="Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-171356.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答                                    </h3>
+                                </a>
+                                <p>一、为什么需要Shadowrocket访问Instagram？  在当今互联网环境中，许多地区对Instagram等社交平台的访问存在限制。Shadowrocket作为一款专业的网络代理工具，凭借其多</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-24">
                             <div class="col-md-3">
                                 <a href="/news/article-170977.htm" class="xcblog-blog-url">
@@ -201,62 +257,6 @@
                                 <p>引言：数字时代的自由之翼  在信息流动如同生命线的今天，全球仍有超过30%的互联网用户生活在不同程度的网络审查环境中。当常规浏览器窗口变成数字牢笼时，Firefox凭借其开源的基因和丰富的插件生态，成</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-18">
-                            <div class="col-md-3">
-                                <a href="/news/article-168662.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/6bf05f250f955b5c11937f0020fca2ab.webp" style="width:100%;" alt="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-168662.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        守护数字原住民：家长如何为孩子打造安全高效的科学上网指南                                    </h3>
-                                </a>
-                                <p>引言：当网络成为第二课堂  在深圳某重点中学的家长会上，一位母亲分享了她12岁儿子的经历：通过科学上网工具，孩子不仅完成了国际太空城市设计大赛的资料收集，还参与了MIT的在线编程课程，但同时也遭遇过钓</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-17">
-                            <div class="col-md-3">
-                                <a href="/news/article-168276.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/38a2b805d092ccfce4ea66fd732ce397.webp" style="width:100%;" alt="古代冲突：文明碰撞与国家博弈的历史回响">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-168276.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        古代冲突：文明碰撞与国家博弈的历史回响                                    </h3>
-                                </a>
-                                <p>引言：血与火中的文明轨迹  当希腊重装步兵在马拉松平原击溃波斯大军时，当十字军的铁骑踏入耶路撒冷的圣殿时，当蒙古铁蹄横扫欧亚大陆时——这些古代冲突的瞬间不仅是军事胜负的转折点，更是人类文明在碰撞中重构</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-16">
-                            <div class="col-md-3">
-                                <a href="/news/article-167887.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/09d18c7c66bcd5cdb6be185eb4661962.webp" style="width:100%;" alt="突破网络壁垒：全方位解决Clash订阅配置失败难题">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-167887.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络壁垒：全方位解决Clash订阅配置失败难题                                    </h3>
-                                </a>
-                                <p>在这个信息全球化的时代，科学上网已成为许多人的日常需求。作为一款强大的代理工具，Clash凭借其多协议支持和灵活配置，赢得了广大用户的青睐。然而，在使用过程中，"配置订阅地址失败"这个问题如同拦路虎，</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-15">
-                            <div class="col-md-3">
-                                <a href="/news/article-167466.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/d82581d2c0ced18795dea383e460a608.webp" style="width:100%;" alt="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-167466.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        Windows平台vmess协议客户端全指南：安全代理的终极解决方案                                    </h3>
-                                </a>
-                                <p>在当今数字化时代，网络隐私与自由访问已成为刚需。vmess协议作为新一代代理技术，以其卓越的安全性和灵活性脱颖而出。本文将深入解析Windows平台三大vmess客户端的核心优势，并提供从安装到优化的</p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/date/2025-10/page-2.htm">2</a></li><li><a href="/date/2025-10/page-3.htm">3</a></li> <li><a href="/date/2025-10/page-2.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -267,16 +267,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
-                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
-                        <li class="py-2"><a href="/news/article-162685.htm" title="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析</a></li>
+                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
                         <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
-                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
-                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
                         <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-171356.htm" title="Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答">Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答</a></li>
                         <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
-                        <li class="py-2"><a href="/news/article-169420.htm" title="突破网络封锁：Telegram与Shadowrocket的完美组合指南">突破网络封锁：Telegram与Shadowrocket的完美组合指南</a></li>
+                        <li class="py-2"><a href="/news/article-172131.htm" title="安卓用户必看：彻底解决Clash代理不稳定的终极指南">安卓用户必看：彻底解决Clash代理不稳定的终极指南</a></li>
+                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
+                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
+                        <li class="py-2"><a href="/news/article-167092.htm" title="突破网络边界：科学上网工具全解析与实用指南">突破网络边界：科学上网工具全解析与实用指南</a></li>
+                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -288,7 +288,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
