--- a/date/2025-10/page-2.htm
+++ b/date/2025-10/page-2.htm
@@ -117,6 +117,62 @@
             <div class="row">
                 <div class="col-md-9">
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-18">
+                            <div class="col-md-3">
+                                <a href="/news/article-168662.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/6bf05f250f955b5c11937f0020fca2ab.webp" style="width:100%;" alt="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-168662.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        守护数字原住民：家长如何为孩子打造安全高效的科学上网指南                                    </h3>
+                                </a>
+                                <p>引言：当网络成为第二课堂  在深圳某重点中学的家长会上，一位母亲分享了她12岁儿子的经历：通过科学上网工具，孩子不仅完成了国际太空城市设计大赛的资料收集，还参与了MIT的在线编程课程，但同时也遭遇过钓</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-17">
+                            <div class="col-md-3">
+                                <a href="/news/article-168276.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/38a2b805d092ccfce4ea66fd732ce397.webp" style="width:100%;" alt="古代冲突：文明碰撞与国家博弈的历史回响">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-168276.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        古代冲突：文明碰撞与国家博弈的历史回响                                    </h3>
+                                </a>
+                                <p>引言：血与火中的文明轨迹  当希腊重装步兵在马拉松平原击溃波斯大军时，当十字军的铁骑踏入耶路撒冷的圣殿时，当蒙古铁蹄横扫欧亚大陆时——这些古代冲突的瞬间不仅是军事胜负的转折点，更是人类文明在碰撞中重构</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-16">
+                            <div class="col-md-3">
+                                <a href="/news/article-167887.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/09d18c7c66bcd5cdb6be185eb4661962.webp" style="width:100%;" alt="突破网络壁垒：全方位解决Clash订阅配置失败难题">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-167887.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        突破网络壁垒：全方位解决Clash订阅配置失败难题                                    </h3>
+                                </a>
+                                <p>在这个信息全球化的时代，科学上网已成为许多人的日常需求。作为一款强大的代理工具，Clash凭借其多协议支持和灵活配置，赢得了广大用户的青睐。然而，在使用过程中，"配置订阅地址失败"这个问题如同拦路虎，</p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-15">
+                            <div class="col-md-3">
+                                <a href="/news/article-167466.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240908-3/d82581d2c0ced18795dea383e460a608.webp" style="width:100%;" alt="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/news/article-167466.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">
+                                        Windows平台vmess协议客户端全指南：安全代理的终极解决方案                                    </h3>
+                                </a>
+                                <p>在当今数字化时代，网络隐私与自由访问已成为刚需。vmess协议作为新一代代理技术，以其卓越的安全性和灵活性脱颖而出。本文将深入解析Windows平台三大vmess客户端的核心优势，并提供从安装到优化的</p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-14">
                             <div class="col-md-3">
                                 <a href="/news/article-167092.htm" class="xcblog-blog-url">
@@ -202,62 +258,6 @@
                                 <p>在当今互联网环境下，科学上网已成为许多用户的日常需求。作为一款功能强大的代理工具，V2Ray以其灵活的配置和稳定的性能赢得了广泛青睐。对于Mac用户而言，掌握从剪切板快速导入V2Ray配置的技巧，能够</p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-08">
-                            <div class="col-md-3">
-                                <a href="/news/article-164810.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/38a2b805d092ccfce4ea66fd732ce397.webp" style="width:100%;" alt="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-164810.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        精通Shadowrocket规则配置：从入门到高阶的完整实践手册                                    </h3>
-                                </a>
-                                <p>引言：数字时代的智能网络导航仪  在全球化互联网访问需求激增的今天，Shadowrocket作为iOS平台的专业级代理工具，凭借其精细化的规则配置系统，已成为科技爱好者和隐私需求者的首选。本文将系统性</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-07">
-                            <div class="col-md-3">
-                                <a href="/news/article-164439.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/4aeea760fe59c1a942a5f33de4469473.webp" style="width:100%;" alt="精通Clash端口设置：从入门到实战的完整指南">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-164439.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        精通Clash端口设置：从入门到实战的完整指南                                    </h3>
-                                </a>
-                                <p>引言：为什么你需要关注Clash端口设置？  在当今数字化时代，网络隐私与效率已成为刚需。Clash作为一款开源、多协议支持的代理工具，凭借其灵活的流量管理能力，逐渐成为技术爱好者和隐私需求者的首选。</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
-                            <div class="col-md-3">
-                                <a href="/news/article-164070.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/0cdbb171f8d1d7104a29a47c2be5e046.webp" style="width:100%;" alt="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-164070.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        全面掌握Shadowrocket安卓版：从零开始实现安全网络代理                                    </h3>
-                                </a>
-                                <p>在当今数字化时代，网络安全与隐私保护已成为每个互联网用户的刚需。无论是突破网络限制访问全球资源，还是保护个人数据免受窥探，一款优秀的网络代理工具都显得至关重要。在众多代理工具中，Shadowrocke</p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
-                            <div class="col-md-3">
-                                <a href="/news/article-163737.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240908-3/a07724a54716f780859ad080d68f8d0a.webp" style="width:100%;" alt="突破网络藩篱：科学上网APK网盘完全使用手册">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/news/article-163737.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">
-                                        突破网络藩篱：科学上网APK网盘完全使用手册                                    </h3>
-                                </a>
-                                <p>引言：数字时代的自由通行证  在这个信息爆炸的时代，互联网本应是无国界的知识海洋，然而现实中我们却常常遭遇无形的数字围墙。当你想查阅某个学术资料、观看海外公开课，或是与全球同事协作时，那道"该页面无法</p>
-                            </div>
-                        </div>
                         
                         <ul class="pagination"><li><a href="/date/2025-10/">&laquo;</a></li> <li><a href="/date/2025-10/">1</a></li><li class="active"><span>2</span></li><li><a href="/date/2025-10/page-3.htm">3</a></li> <li><a href="/date/2025-10/page-3.htm">&raquo;</a></li></ul>                    </div>
                 </div>
@@ -268,16 +268,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-169039.htm" title="突破网络边界：Firefox科学上网插件的深度指南与实战解析">突破网络边界：Firefox科学上网插件的深度指南与实战解析</a></li>
-                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
-                        <li class="py-2"><a href="/news/article-169808.htm" title="Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？">Clash代理服务费用全解析：从免费到付费，如何精准选择最适合你的方案？</a></li>
-                        <li class="py-2"><a href="/news/article-164070.htm" title="全面掌握Shadowrocket安卓版：从零开始实现安全网络代理">全面掌握Shadowrocket安卓版：从零开始实现安全网络代理</a></li>
-                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
-                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-168276.htm" title="古代冲突：文明碰撞与国家博弈的历史回响">古代冲突：文明碰撞与国家博弈的历史回响</a></li>
-                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
+                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-170197.htm" title="深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南">深度揭秘心阶云V2Ray：科学上网的利器全方位使用指南</a></li>
                         <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-172904.htm" title="V2Ray与WHMCS的完美融合：打造高效代理服务管理平台">V2Ray与WHMCS的完美融合：打造高效代理服务管理平台</a></li>
+                        <li class="py-2"><a href="/news/article-170977.htm" title="绿色浏览器科学上网：隐私保护与自由访问的完美结合">绿色浏览器科学上网：隐私保护与自由访问的完美结合</a></li>
+                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-164810.htm" title="精通Shadowrocket规则配置：从入门到高阶的完整实践手册">精通Shadowrocket规则配置：从入门到高阶的完整实践手册</a></li>
+                        <li class="py-2"><a href="/news/article-169420.htm" title="突破网络封锁：Telegram与Shadowrocket的完美组合指南">突破网络封锁：Telegram与Shadowrocket的完美组合指南</a></li>
+                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
                     </ul>
     </div>
 </div>
@@ -289,7 +289,10 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
