--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -126,18 +126,18 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://c.xcvpn.me/?path=" data-type="Xingchen" data-code="register&code" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
 
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" rel="nofollow noopener" style="color:red;">飞鸟加速</a>】</h3>
-                        <p>🚀 飞鸟加速 · 高速·稳定·无限可能</p><p>&nbsp;1. 多地专线高速节点，极速跨境体验，告别卡顿与延迟！</p><p>&nbsp;2. 一键解锁Netflix、Disney+、TikTok等全球流媒体，尽享自由精彩！</p><p>&nbsp;3. GPT专属线路支持，保障ChatGPT等AI服务高可用，稳定流畅！</p><p>&nbsp;4. 支持多设备同时使用，无限制，畅连全球！</p><p>&nbsp;5. 自有机房专柜，全球多地接入，安全可靠！</p><p>&nbsp;6. 专业客服团队7x24小时响应，使用无忧！</p>
-
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">飞鸟加速（点击注册）</a>】</p>
-
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.xiyou666.xyz/?path=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="color:red;">西游云</a>】</h3>
                         <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">农夫山泉（点击注册）</a>】</p>
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.xiyou666.xyz/?path=" data-type="Xiyou" data-code="7WiPAwPs" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">西游云（点击注册）</a>】</p>
+
+<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" rel="nofollow noopener" style="color:red;">飞鸟加速</a>】</h3>
+                        <p>🚀 飞鸟加速 · 高速·稳定·无限可能</p><p>&nbsp;1. 多地专线高速节点，极速跨境体验，告别卡顿与延迟！</p><p>&nbsp;2. 一键解锁Netflix、Disney+、TikTok等全球流媒体，尽享自由精彩！</p><p>&nbsp;3. GPT专属线路支持，保障ChatGPT等AI服务高可用，稳定流畅！</p><p>&nbsp;4. 支持多设备同时使用，无限制，畅连全球！</p><p>&nbsp;5. 自有机房专柜，全球多地接入，安全可靠！</p><p>&nbsp;6. 专业客服团队7x24小时响应，使用无忧！</p>
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.112112789.xyz/?path=" data-type="FeiniaoJiasu" data-code="register&code" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">飞鸟加速（点击注册）</a>】</p>
 
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                        <h3>高速机场推荐4【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="G6yPcu5e" rel="nofollow noopener" style="color:red;">狗狗加速</a>】</h3>
                         <p>狗狗加速作为第一家上线Hysteria1协议的机场，目前已经全面上线Hysteria2协议；不同于hy1，hy2全面优化了链接速度(0-RTT)，进一步降低延迟；同时使用全新的带宽控制方式；能发挥您带宽的最大潜能！全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
@@ -165,16 +165,16 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-167887.htm" title="突破网络壁垒：全方位解决Clash订阅配置失败难题">突破网络壁垒：全方位解决Clash订阅配置失败难题</a></li>
-                        <li class="py-2"><a href="/news/article-167092.htm" title="突破网络边界：科学上网工具全解析与实用指南">突破网络边界：科学上网工具全解析与实用指南</a></li>
                         <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-173276.htm" title="穿越信息高墙：2018年11月科学上网全攻略深度回顾">穿越信息高墙：2018年11月科学上网全攻略深度回顾</a></li>
+                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-173663.htm" title="V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程">V2RayNG终极指南：从零开始掌握安全科学上网的全流程教程</a></li>
+                        <li class="py-2"><a href="/news/article-170590.htm" title="Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案">Shadowrocket账号购买后为何消失？全面解析常见问题与解决方案</a></li>
+                        <li class="py-2"><a href="/news/article-165202.htm" title="轻松掌握：V2Ray剪切板配置导入Mac全攻略">轻松掌握：V2Ray剪切板配置导入Mac全攻略</a></li>
+                        <li class="py-2"><a href="/news/article-169420.htm" title="突破网络封锁：Telegram与Shadowrocket的完美组合指南">突破网络封锁：Telegram与Shadowrocket的完美组合指南</a></li>
+                        <li class="py-2"><a href="/news/article-172513.htm" title="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单</a></li>
                         <li class="py-2"><a href="/news/article-165569.htm" title="掌握Surfboard配置艺术：从入门到精通的完全指南">掌握Surfboard配置艺术：从入门到精通的完全指南</a></li>
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-162685.htm" title="穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析">穿越数字边界的利器：无界v2rayng全方位使用指南与深度解析</a></li>
-                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
-                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
+                        <li class="py-2"><a href="/news/article-164439.htm" title="精通Clash端口设置：从入门到实战的完整指南">精通Clash端口设置：从入门到实战的完整指南</a></li>
                     </ul>
     </div>
 </div>
@@ -186,7 +186,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">23</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+            </li>
+                        <li class="py-2">
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                     </ul>
     </div>
