--- a/about-us.htm
+++ b/about-us.htm
@@ -131,16 +131,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-171356.htm" title="Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答">Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答</a></li>
+                        <li class="py-2"><a href="/news/article-167466.htm" title="Windows平台vmess协议客户端全指南：安全代理的终极解决方案">Windows平台vmess协议客户端全指南：安全代理的终极解决方案</a></li>
                         <li class="py-2"><a href="/news/article-172513.htm" title="从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单">从零到部署：全流程详解V2Ray对接SSPanel一键脚本，让翻墙管理高效又简单</a></li>
-                        <li class="py-2"><a href="/news/article-167092.htm" title="突破网络边界：科学上网工具全解析与实用指南">突破网络边界：科学上网工具全解析与实用指南</a></li>
-                        <li class="py-2"><a href="/news/article-162979.htm" title="免费Clash机场网址全攻略：从获取到配置的完整指南">免费Clash机场网址全攻略：从获取到配置的完整指南</a></li>
-                        <li class="py-2"><a href="/news/article-163358.htm" title="突破边界：小米路由器2的科学上网全攻略与深度体验">突破边界：小米路由器2的科学上网全攻略与深度体验</a></li>
-                        <li class="py-2"><a href="/news/article-172131.htm" title="安卓用户必看：彻底解决Clash代理不稳定的终极指南">安卓用户必看：彻底解决Clash代理不稳定的终极指南</a></li>
-                        <li class="py-2"><a href="/news/article-173276.htm" title="穿越信息高墙：2018年11月科学上网全攻略深度回顾">穿越信息高墙：2018年11月科学上网全攻略深度回顾</a></li>
+                        <li class="py-2"><a href="/news/article-166327.htm" title="科学上网协议全解析：从原理到实践的完整指南">科学上网协议全解析：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-165946.htm" title="v2rayNG停止运行的原因及全面解决方案">v2rayNG停止运行的原因及全面解决方案</a></li>
                         <li class="py-2"><a href="/news/article-166704.htm" title="深度解析V2Ray三个月签：从选购到配置的全方位指南">深度解析V2Ray三个月签：从选购到配置的全方位指南</a></li>
-                        <li class="py-2"><a href="/news/article-163737.htm" title="突破网络藩篱：科学上网APK网盘完全使用手册">突破网络藩篱：科学上网APK网盘完全使用手册</a></li>
+                        <li class="py-2"><a href="/news/article-175637.htm" title="突破网络边界：三星Gear科学上网完全指南">突破网络边界：三星Gear科学上网完全指南</a></li>
+                        <li class="py-2"><a href="/news/article-168662.htm" title="守护数字原住民：家长如何为孩子打造安全高效的科学上网指南">守护数字原住民：家长如何为孩子打造安全高效的科学上网指南</a></li>
+                        <li class="py-2"><a href="/news/article-171356.htm" title="Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答">Shadowrocket解锁Instagram全攻略：从安装配置到疑难解答</a></li>
+                        <li class="py-2"><a href="/news/article-171731.htm" title="全面掌握Clash订阅地址转换：从原理到实践的完整指南">全面掌握Clash订阅地址转换：从原理到实践的完整指南</a></li>
+                        <li class="py-2"><a href="/news/article-173276.htm" title="穿越信息高墙：2018年11月科学上网全攻略深度回顾">穿越信息高墙：2018年11月科学上网全攻略深度回顾</a></li>
                     </ul>
     </div>
 </div>
@@ -152,7 +152,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">3</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
+                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-11/" title="2025-11 归档">2025-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
